Dev Version:

-- fix: `__LINE__` returns the full path
-- fix: `a =>=> b =>` is not a syntax error
-- fix: `(,)` is a syntax error

9.028 cpan:Perlito5 2018-09-03

- fix a problem compiling the example from Perlito5 COOKBOOK section

9.027 cpan:Perlito5 2018-09-03

- fix Grammar::CORE in CPAN, the grammar was not precompiled

- Java:
-- CORE functions:
	formline()
	form() initial implementation
	sprintf() argument "%vd"

- JavaScript:
-- CORE functions:
	delete(@h{@keys})
	sprintf() argument "%vd"
	vec()

- Core compiler:
-- 'form' compiler
-- add Perlito5/Runtime/Formline.pm for CORE::formline() implementation
-- add core module: feature.pm, warnings.pm

9.026 cpan:Perlito5 2018-06-13

- remove CPAN tests that depend on specific Perl versions

9.025 cpan:Perlito5 2018-05-31

- remove CPAN tests that depend on specific Perl versions
- add  modules:
-- Class::XSAccessor pure-perl replacement
-- Test::More - work in progress

- Java:
-- open() mode ">&" and "<&" emulation

9.024 cpan:Perlito5 2018-05-28

- remove CPAN tests that depend on specific Perl versions

- Java:
-- fix syntax error in "or" operation
-- fix "Inf" in emitter

9.023 cpan:Perlito5 2018-05-24

- Parser:
-- some "goto" forms are transformed, so they work in JavaScript and Java backends.
-- fix chomp(), chop()
-- fix fat-arrow in argument lists
-- fix indirect object
-- indented heredoc with <<~"tag"
-- use $^H and %^H
-- set Perl version to 5.026
-- add core modules:
	Env
	Benchmark, Memoize
	DirHandle, File::Spec, File::Basename,
	Text::Abbrev, Text::ParseWords
	Time::Local, Time::localtime, Time::gmtime
	Getopt::Std, Getopt::Long
	Tie::Hash, Tie::Scalar, Tie::Array, warnings::register,
	Fcntl, Symbol, Term::ANSIColor,
	FindBin
	IO, IO::Handle, IO::Seekable, IO::File,
	Class::Struct, Perl::OSType
	integer, if, parent, subs, mro
-- syntax fixes for hash vs. block, and ${var->{index}}
-- CORE:: prefix (CORE::print, CORE::tr)
-- CORE::GLOBAL special namespace
-- CORE functions can be overridden