@@ -3,6 +3,7 @@ Dev Version:
 -- fix: `__LINE__` returns the full path
 -- fix: `a =>=> b =>` is not a syntax error
 -- fix: `(,)` is a syntax error
+-- add core module POSIX with floor(), ceil(), and most of strftime()
 
 9.028 cpan:Perlito5 2018-09-03
 
